--- a/style.css
+++ b/style.css
@@ -1,20 +1,34 @@
-.st{
-    width:50%;
-    height: 600px;
+.container{
+    width:100%;
+    height: 800px;
     border-radius: 20px;
     background-color:  whitesmoke;
+    border: 1px solid black;
+}
+.icons{
+    text-align: center;
+    padding: 10px;
+}
+
+
+.header{
     display: flex;
 }
-.nd{
-    width: 70%;
+.first{
+    width: 75%;
     display: inline-block;
 }
-img{
-    width: 100px;
-    height: 100px;
-    margin-top: 20px;
+.second{
+    width: 25%;
+}
+.profile-img{
+    display: block;
+    width: 60px;
+    height: 60px;
+    margin: 30px auto 0;
     border-radius: 50%;
 }
+
 .name{
     font-family: "Poppins", sans-serif;
     font-weight: 600;
@@ -24,4 +38,83 @@ img{
 .s_name{
     padding-left: 20px;
     margin-top: -18px;
+}
+.aria{
+    font-family: "Poppins", sans-serif;
+    font-weight: 200;
+    padding-left: 30px;
+    padding-top: -200px;
+}
+.edit-box{
+    background: rgb(240, 239, 239);
+    margin: 0 20px;
+    border: 1px solid rgb(122, 122, 122);
+    border-radius: 10px;
+    text-align: center;
+    font-family: "Poppins";
+    padding: 5px ;
+}
+.tab{
+    font-family: "poppins";
+    padding: 2px;
+    display: flex;
+    justify-content: space-around;
+}
+.tab span{
+   padding: 8px 8px;
+}
+.post{
+    
+    height: 50px;
+    padding: 5px;
+    background-color: rgb(224, 226, 226);
+    border:1px solid rgb(70, 70, 70);
+    display: flex;
+}
+.input-img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: inline-block;
+}
+.i-text{
+    width: 85%;
+    background: none;
+    border: none;
+    font-size: 18px;
+    font-family:"poppins";
+    display: inline-block;
+}
+.card-box{
+    display: flex;
+}
+.one{
+    width: 33%;
+    margin: 20px;
+    padding: 5px;
+    text-align: center;
+    background-color:rgb(236, 233, 233);
+    border-radius: 20px;
+    margin-top: 20px;
+    font-family: poppins;
+    
+}
+.one button{
+    padding: 10px;
+    box-sizing: border-box;
+    border-radius: 15px;
+    text-align: center;
+    font-family: poppins;
+    width: 100px;
+    width: 80%;
+    height: 20%;
+    background-color: black;
+    color: white;
+}
+.one p{
+    font-size: 13px;
+    font-family: poppins;
+}
+.one img{
+    width: 30px;
 }
